[gd_scene load_steps=3 format=3 uid="uid://dms0s7esxb355"]

[ext_resource type="Script" uid="uid://bh2ugteauwlgm" path="res://script/canvas_layer.gd" id="1_jfcen"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_menu"]
bg_color = Color(0.1, 0.08, 0.15, 0.92)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.6, 0.4, 0.8, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[node name="menu" type="CanvasLayer"]
layer = 10
script = ExtResource("1_jfcen")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0, 0, 0, 0.6)

[node name="Panel" type="Panel" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -160.0
offset_right = 150.0
offset_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_menu")

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 15.0
offset_right = -15.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Title" type="Label" parent="ColorRect/Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.6, 1, 1)
theme_override_font_sizes/font_size = 28
horizontal_alignment = 1
text = "âš” PAUSED âš”"

[node name="Spacer" type="Control" parent="ColorRect/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="RESUME" type="Button" parent="ColorRect/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.4, 1, 0.4, 1)
theme_override_font_sizes/font_size = 24
text = "â–¶ RESUME"

[node name="RESPAWN" type="Button" parent="ColorRect/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 0.9, 0.4, 1)
theme_override_font_sizes/font_size = 24
text = "ðŸ”„ RESPAWN"

[node name="RESTART" type="Button" parent="ColorRect/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 0.6, 0.3, 1)
theme_override_font_sizes/font_size = 24
text = "âŸ³ RESTART"

[node name="EXIT" type="Button" parent="ColorRect/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 0.4, 0.4, 1)
theme_override_font_sizes/font_size = 24
text = "âœ• EXIT"

[connection signal="pressed" from="ColorRect/Panel/VBoxContainer/RESUME" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="ColorRect/Panel/VBoxContainer/RESPAWN" to="." method="_on_respawn_pressed"]
[connection signal="pressed" from="ColorRect/Panel/VBoxContainer/RESTART" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="ColorRect/Panel/VBoxContainer/EXIT" to="." method="_on_exit_pressed"]
